<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbgcolor"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/welcome_back"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/todayTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeTxt"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/today_s_task"
                android:textSize="28sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/edSearchL"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sortImg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/sort_24" />

                <ImageView
                    android:id="@+id/listOrGridImg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/view_list"
                    app:tint="@color/black" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edSearchL"
                style="@style/SearchInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/todayTxt"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/search">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_search_title"
                    android:imeOptions="actionSearch"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edSearchL"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="10dp"
                android:layout_centerHorizontal="true"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:paddingBottom="100dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/material_dynamic_primary50"
        android:text="@string/add_task"
        android:id="@+id/addTaskFABtn"
        android:textColor="@color/black"
        android:contentDescription="@string/floating_action_btn"
        android:textStyle="bold"
        android:textSize="18sp"
        app:icon="@drawable/edit_24"
        app:iconSize="20dp"
        app:iconTint="@color/black"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>